--- a/webdev/tindog-bootstrap-tutorial/css/styles.css
+++ b/webdev/tindog-bootstrap-tutorial/css/styles.css
@@ -20,18 +20,100 @@ font-family: 'Ubuntu', sans-serif;
 
 */
 
+
+/* ---------------------- Id Selectors ---------------------- */
+
 #title {
   background-color: #FF4C68;
   font-family: 'Ubuntu', sans-serif;
+  color: #fff;
+}
+
+#features {
+  padding: 7% 15%;
+}
+
+
+/* ---------------------- Class Selectors ---------------------- */
+
+.feature-box {
+  text-align: center;
+  padding: 5%;
 }
 
 .container-fluid {
   padding: 3% 15%;
 }
 
+
+/* Navigation Bar */
+
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: 'Ubuntu';
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0px 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-weight: 200;
+}
+
+
+/* Download Buttons */
+
+.download-button {
+  margin: 5% 3% 5% 0%;
+}
+
+
+/* Title Image */
+
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+}
+
+.icon {
+  color: #EF8172;
+  margin-bottom: 1rem;
+}
+
+
+/* pseudo-states, like hover */
+
+.icon:hover {
+  color: #ff4c68;
+}
+
+
+/* ---------------------- Tag Selectors ---------------------- */
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  size: 3rem;
+  font-size: 3.4rem;
   line-height: 1.5;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 1.3rem;
+}
+
+p {
+  color: #8F8F8F;
 }
