--- a/webdev/simonGame01/styles.css
+++ b/webdev/simonGame01/styles.css
@@ -119,6 +119,62 @@ body {
   top: 200px;
 }
 
+.simon-name-text {
+  position: absolute;
+  left: 50px;
+  top: 17px;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.text-in-white-body {
+  position: absolute;
+  font-family: 'Lucida Sans', Verdana, sans-serif;
+  font-size: 1.3rem;
+  font-weight: 200;
+}
+
+.start-text {
+  left: 20px;
+  top: 80px;
+}
+
+.strict-text {
+  left: 75px;
+  top: 80px;
+}
+
+.reset-text {
+  left: 135px;
+  top: 80px;
+}
+
+.button-in-white-body {
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  border: 3px #212122 solid;
+}
+
+.green-body-button {
+  background-color: #26b644;
+  left: 26px;
+  top: 110px;
+}
+
+.red-body-button {
+  background-color: #d62626;
+  left: 85px;
+  top: 110px;
+}
+
+.yellow-body-button {
+  background-color: #eec025;
+  left: 147px;
+  top: 110px;
+}
+
 
 /* 
 
