django study, models orm query

--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/single-project.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/single-project.html
@@ -4,4 +4,12 @@
 <h1>{{ project.title }}</h1> 
 <br>
 <p> {{ project.description }} </p> 
+<hr>
+{% comment %} We can write ORM queries inside of the template {% endcomment %}
+{% for tag in project.tags.all %}
+    <span style="border:2px solid grey">
+        {{tag}}
+    </span>
+{% endfor %}
+<hr>
 {% endblock %}
