--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/projects.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/projects.html
@@ -4,21 +4,37 @@
     <p>Hello, you are in the {{ page }} page.</p>
 
 
-    {% if number > 10 %}
+    {% comment %} {% if number > 10 %}
     <p> Number is greater than 10. </p> 
     {% elif number == 10 %}
     <p> Number is exactly 10. </p> 
     {% else %}
     <p> Number is less then 10. </p> 
-    {% endif %}
+    {% endif %} {% endcomment %}
 
     <h1>Projects</h1> 
-    <p></p>
-    <ul>
+
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Project</th>
+            <th>Votes</th>
+            <th>Ratio</th>
+            <th>Created</th>
+            <th></th>
+        </tr>
         {% for project in projects %}
-            <li>Name: <a href="{% url 'project' project.id %}">{{ project.title }}</a> --- {{ project.description }}</li>
+        <tr>
+            <td>{{project.id}}</td>
+            <td>{{project.title}}</td>
+            <td>{{project.vote_total}}</td>
+            <td>{{project.vote_ratio}}%</td>
+            <td>{{project.created}}</td>
+            <td><a href="{% url 'project' project.id %}"> View </a></td>
+        </tr>
         {% endfor %}
-    </ul>
+    </table>
+
 
 
 
