--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/main.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/main.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Search</title>
+    <style>
+        table{
+        }
+        tr{
+            {% comment %} border: 1px solid blue; {% endcomment %}
+        }
+        td {
+            {% comment %} border: 1px solid green; {% endcomment %}
+        }
+    </style>
 </head>
 <body>
     <h1>
