--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/navbar.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/navbar.html
@@ -1,8 +1,32 @@
 {% load static %}
 
-<img src="{% static 'images/logo.svg' %}">
+{% comment %} <img src="{% static 'images/logo.svg' %}">
 
 <a href="{% url 'create-project' %}">Add Project</a>
-<hr>
+<hr> {% endcomment %}
 
+<!-- Header Section -->
+<header class="header">
+<div class="container container--narrow">
+    <a href="{% url 'projects' %}" class="header__logo">
+    <img src="{% static 'images/logo.svg' %}" alt="DevSearch Logo" />
+    </a>
+    <nav class="header__nav">
+    <input type="checkbox" id="responsive-menu" />
+    <label for="responsive-menu" class="toggle-menu">
+        <span>Menu</span>
+        <div class="toggle-menu__lines"></div>
+    </label>
+    <ul class="header__menu">
+        <li class="header__menuItem"><a href="">Developers</a></li>
+        <li class="header__menuItem"><a href="">Projects</a></li>
+        <li class="header__menuItem"><a href="">Inbox</a></li>
+        {% comment %} <li class="header__menuItem"><a href="">My Account</a></li> {% endcomment %}
+        <li class="header__menuItem"><a href="{% url 'create-project' %}">Add Project</a></li>
+        {% comment %} <li class="header__menuItem"><a href="{% url 'create-project' %}" class="btn btn--sub">Add Project</a></li> {% endcomment %}
+        <li class="header__menuItem"><a href="" class="btn btn--sub">Login/Sign Up</a></li>
+    </ul>
+    </nav>
+</div>
+</header>
 
