--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/projects.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/projects.html
@@ -1,102 +1,98 @@
-{% extends "main.html" %}
+{% extends "main.html" %} {% block content %} {% comment %}
+<p>Hello, you are in the {{ page }} page.</p>
+<h1>Projects</h1>
+<table>
+	<tr>
+		<th>Project</th>
+		<th>Votes</th>
+		<th>Ratio</th>
+		<th>Created</th>
+		<th></th>
+		<th></th>
+	</tr>
+	{% for project in projects %}
+	<tr>
+		<td>{{project.title}}</td>
+		<td>{{project.vote_total}}</td>
+		<td>{{project.vote_ratio}}%</td>
+		<td>{{project.created}}</td>
+		<td><a href="{% url 'update-project' project.id %}"> Edit </a></td>
+		<td><a href="{% url 'delete-project' project.id %}"> Delete </a></td>
+		<td><a href="{% url 'project' project.id %}"> View </a></td>
+	</tr>
+	{% endfor %}
+</table>
+{% endcomment %}
 
-{% block content %}
+<main class="projects">
+	<section class="hero-section text-center">
+		<div class="container container--narrow">
+			<div class="hero-section__box">
+				<h2>Search for <span>Projects</span></h2>
+			</div>
 
-  {% comment %} <p>Hello, you are in the {{ page }} page.</p>
-    <h1>Projects</h1>
-    <table>
-        <tr>
-            <th>Project</th>
-            <th>Votes</th>
-            <th>Ratio</th>
-            <th>Created</th>
-            <th></th>
-            <th></th>
-        </tr>
-        {% for project in projects %}
-        <tr>
-            <td>{{project.title}}</td>
-            <td>{{project.vote_total}}</td>
-            <td>{{project.vote_ratio}}%</td>
-            <td>{{project.created}}</td>
-            <td><a href="{% url 'update-project' project.id %}"> Edit </a></td>
-            <td><a href="{% url 'delete-project' project.id %}"> Delete </a></td>
-            <td><a href="{% url 'project' project.id %}"> View </a></td>
-        </tr>
-        {% endfor %}
-    </table> {% endcomment %}
+			<div class="hero-section__search">
+				<form class="form" action="#" method="get">
+					<div class="form__field">
+						<label for="formInput#search">Search By Projects </label>
+						<input
+							class="input input--text"
+							id="formInput#search"
+							type="text"
+							name="text"
+							placeholder="Search by Project Title"
+						/>
+					</div>
 
-  <main class="projects">
-    <section class="hero-section text-center">
-      <div class="container container--narrow">
-        <div class="hero-section__box">
-          <h2>Search for <span>Projects</span></h2>
-        </div>
-
-        <div class="hero-section__search">
-          <form class="form" action="#" method="get">
-            <div class="form__field">
-              <label for="formInput#search">Search By Projects </label>
-              <input class="input input--text" id="formInput#search" type="text" name="text"
-                placeholder="Search by Project Title" />
-            </div>
-
-            <input class="btn btn--sub btn--lg" type="submit" value="Search" />
-          </form>
-        </div>
-      </div>
-    </section>
-    <!-- Search Result: DevList -->
-    <section class="projectsList">
-      <div class="container">
-        <div class="grid grid--three">
-
-        {% for project in projects %}
-
-        <!-- <tr>
-            <td>{{project.created}}</td>
-            <td><a href="{% url 'update-project' project.id %}"> Edit </a></td>
-            <td><a href="{% url 'delete-project' project.id %}"> Delete </a></td>
-            <td><a href="{% url 'project' project.id %}"> View </a></td>
-        </tr>  -->
-
-        <div class="column">
-          <div class="card project">
-            <a href="{% url 'project' project.id %}" class="project">
-              <img class="project__thumbnail" src="{{ project.featured_image.url }}" alt="project thumbnail" />
-              <div class="card__body">
-                <h3 class="project__title">{{ project.title }}</h3>
-                <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
-                <p class="project--rating">
-                  <span style="font-weight: bold;">{{ project.vote_ratio }}%</span> Positittive
-                  Feedback ({{ project.vote_total }} Votes)
-                </p>
-                <div class="project__tags">
-
-                  {% comment %} In here we need to include another for loop {% endcomment %}
-
-                  <span class="tag tag--pill tag--main">
-                    <small>NextJS</small>
-                  </span>
-
-                  <span class="tag tag--pill tag--main">
-                    <small>GraphQL</small>
-                  </span>
-
-                  <span class="tag tag--pill tag--main">
-                    <small>TypeScript</small>
-                  </span>
-
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        {% endfor %}
-
-        </div>
-      </div>
-    </section>
-  </main>
+					<input class="btn btn--sub btn--lg" type="submit" value="Search" />
+				</form>
+			</div>
+		</div>
+	</section>
+	<!-- Search Result: DevList -->
+	<section class="projectsList">
+		<div class="container">
+			<div class="grid grid--three">
+				{% for project in projects %}
+				<div class="column">
+					<div class="card project">
+						<a href="{% url 'project' project.id %}" class="project">
+							<img
+								class="project__thumbnail"
+								src="{{ project.featured_image.url }}"
+								alt="project thumbnail"
+							/>
+							<div class="card__body">
+								<h3 class="project__title">{{ project.title }}</h3>
+								<p>
+									<a
+										class="project__author"
+										href="{% url 'project' project.id %}"
+										>By Dennis Ivanov</a
+									>
+								</p>
+								<p class="project--rating">
+									<span style="font-weight: bold"
+										>{{ project.vote_ratio }}%</span
+									>
+									Positive Feedback ({{ project.vote_total }}
+									Vote{{project.vote_total | pluralize:"s"}})
+								</p>
+								<div class="project__tags">
+									{% for tag in project.tags.all %}
+									<span class="tag tag--pill tag--main">
+										<small>{{ tag }}</small>
+									</span>
+									{% endfor %}
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				{% endfor %}
+			</div>
+		</div>
+	</section>
+</main>
 
 {% endblock %}
