--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/projects.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/projects.html
@@ -68,7 +68,7 @@
 									<a
 										class="project__author"
 										href="{% url 'project' project.id %}"
-										>By Dennis Ivanov</a
+										>{{ project.owner.name }}</a
 									>
 								</p>
 								<p class="project--rating">
