--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/main.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/main.html
@@ -9,9 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-  <!-- <link rel="shortcut icon" href="http://sstatic.net/so/favicon.ico" type="image/x-icon" /> -->
-  <!-- <link rel="shortcut icon" href="//cdn.perfmatters.io/favicon.ico" type="image/x-icon" /> -->
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon?v=2" />
   <!-- Icon - IconMonster -->
   <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
   <!-- Mumble UI -->
