--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/projects.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/projects.html
@@ -67,7 +67,7 @@
 								<p>
 									<a
 										class="project__author"
-										href="{% url 'project' project.id %}"
+										href="{% url 'user-profile' project.owner.id %}"
 										>{{ project.owner.name }}</a
 									>
 								</p>
