--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/users/templates/users/user-profile.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/users/templates/users/user-profile.html
@@ -45,28 +45,23 @@
             <h3 class="devInfo__title">Skills</h3>
             <div class="devInfo__skills">
 
-
-
+              {% for skill in top_skills %}
               <div class="devSkill">
-                <h4 class="devSkill__title">JavaScript</h4>
+                <h4 class="devSkill__title"> {{ skill.name }} </h4>
                 <p class="devSkill__info">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae neque voluptatum ut? Quaerat, ea
-                  cumque! Dolorum provident esse molestias commodi odit sapiente quod quasi corrupti obcaecati? Nobis
-                  ex temporibus quaerat!
+                  {{ skill.description }}
                 </p>
               </div>
-
-
+              {% endfor %}
 
               <h3 class="devInfo__subtitle">Other Skills</h3>
               <div class="devInfo__otherSkills">
-
+                {% for skill in other_skills %}
                 <span class="tag tag--pill tag--sub tag--lg">
-                  <small>Figma</small>
+                  <small>{{ skill.name }}</small>
                 </span>
-
+                {% endfor %}
               </div>
-
 
             </div>
           </div>
@@ -74,86 +69,30 @@
             <h3 class="devInfo__title">Projects</h3>
             <div class="grid grid--two">
 
+              {% for project in profile.project_set.all %}
               <div class="column">
                 <div class="card project">
-                  <a href="single-project.html" class="project">
-                    <img class="project__thumbnail" src="images/project-b.png" alt="project thumbnail" />
+                  <a href="{% url 'project' project.id %}" class="project">
+                    <img class="project__thumbnail" src="{{ project.featured_image.url }}" alt="project thumbnail" />
                     <div class="card__body">
-                      <h3 class="project__title">DevSearch UI Design</h3>
-                      <p><a class="project__author" href="profile.html">By Shahriar P. Shuvo</a></p>
+                      <h3 class="project__title">{{ project.title }}</h3>
+                      <p><a class="project__author" href="{% url 'user-profile' project.owner.id %}">By {{ project.owner.name }}</a></p>
                       <p class="project--rating">
-                        <span style="font-weight: bold;">92%</span> Postitive
-                        Feedback (62 Votes)
+                        <span style="font-weight: bold;">{{ project.vote_ratio }}%</span> Positive
+                        Feedback ({{ project.vote_total }} Vote{{ project.vote_total|pluralize:"s" }})
                       </p>
                       <div class="project__tags">
+                        {% for tag in project.tags.all %}
                         <span class="tag tag--pill tag--main">
-                          <small>NextJS</small>
+                          <small> {{ tag.name }} </small>
                         </span>
-                        <span class="tag tag--pill tag--main">
-                          <small>GraphQL</small>
-                        </span>
-                        <span class="tag tag--pill tag--main">
-                          <small>TypeScript</small>
-                        </span>
+                        {% endfor %}
                       </div>
                     </div>
                   </a>
                 </div>
               </div>
-
-              <div class="column">
-                <div class="card project">
-                  <a href="single-project.html" class="project">
-                    <img class="project__thumbnail" src="images/project-c.png" alt="project thumbnail" />
-                    <div class="card__body">
-                      <h3 class="project__title">Another Landing Page</h3>
-                      <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
-                      <p class="project--rating">
-                        <span style="font-weight: bold;">36%</span> Postitive
-                        Feedback (18 Votes)
-                      </p>
-                      <div class="project__tags">
-                        <span class="tag tag--pill tag--main">
-                          <small>NextJS</small>
-                        </span>
-                        <span class="tag tag--pill tag--main">
-                          <small>GraphQL</small>
-                        </span>
-                        <span class="tag tag--pill tag--main">
-                          <small>TypeScript</small>
-                        </span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-
-              <div class="column">
-                <div class="card project">
-                  <a href="single-project.html" class="project">
-                    <img class="project__thumbnail" src="images/project-a.png" alt="project thumbnail" />
-                    <div class="card__body">
-                      <h3 class="project__title">Yoga Studio Landing Page Website and Design</h3>
-                      <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
-                      <p class="project--rating">
-                        <span style="font-weight: bold;">98%</span> Postitive
-                        Feedback (72 Votes)
-                      </p>
-                      <div class="project__tags">
-                        <span class="tag tag--pill tag--main">
-                          <small>NextJS</small>
-                        </span>
-                        <span class="tag tag--pill tag--main">
-                          <small>GraphQL</small>
-                        </span>
-                        <span class="tag tag--pill tag--main">
-                          <small>TypeScript</small>
-                        </span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
+              {% endfor %}
 
             </div>
           </div>
