--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/navbar.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/navbar.html
@@ -24,7 +24,12 @@
         {% comment %} <li class="header__menuItem"><a href="">My Account</a></li> {% endcomment %}
         <li class="header__menuItem"><a href="{% url 'create-project' %}">Add Project</a></li>
         {% comment %} <li class="header__menuItem"><a href="{% url 'create-project' %}" class="btn btn--sub">Add Project</a></li> {% endcomment %}
-        <li class="header__menuItem"><a href="" class="btn btn--sub">Login/Sign Up</a></li>
+
+        {% if request.user.is_authenticated %}
+        <li class="header__menuItem"><a href="{% url 'login' %}" class="btn btn--sub">Logout</a></li>
+        {% else %}
+        <li class="header__menuItem"><a href="{% url 'login' %}" class="btn btn--sub">Login/Sign Up</a></li>
+        {% endif %}    
     </ul>
     </nav>
 </div>
