--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/project-form.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/projects/templates/projects/project-form.html
@@ -4,7 +4,7 @@
 <main class="formPage my-xl">
 	<div class="content-box">
 		<div class="formWrapper">
-			<a class="backButton" href="#"><i class="im im-angle-left"></i></a>
+			<a class="backButton" href="{% url 'projects' %}"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z"/></svg> </a>
 			<br />
 
 			<form class="form" method="POST" enctype="multipart/form-data">
