--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/navbar.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/navbar.html
@@ -21,12 +21,10 @@
         <li class="header__menuItem"><a href="{% url 'profiles' %}">Developers</a></li>
         <li class="header__menuItem"><a href="{% url 'projects' %}">Projects</a></li>
         <li class="header__menuItem"><a href="">Inbox</a></li>
-        {% comment %} <li class="header__menuItem"><a href="">My Account</a></li> {% endcomment %}
-        <li class="header__menuItem"><a href="{% url 'create-project' %}">Add Project</a></li>
-        {% comment %} <li class="header__menuItem"><a href="{% url 'create-project' %}" class="btn btn--sub">Add Project</a></li> {% endcomment %}
 
         {% if request.user.is_authenticated %}
-        <li class="header__menuItem"><a href="{% url 'login' %}" class="btn btn--sub">Logout</a></li>
+        <li class="header__menuItem"><a href="{% url 'create-project' %}">Add Project</a></li>
+        <li class="header__menuItem"><a href="{% url 'logout' %}" class="btn btn--sub">Logout</a></li>
         {% else %}
         <li class="header__menuItem"><a href="{% url 'login' %}" class="btn btn--sub">Login/Sign Up</a></li>
         {% endif %}    
