--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/users/templates/users/login-register.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/users/templates/users/login-register.html
@@ -1,12 +1,25 @@
-{% extends "main.html" %}
+{% extends "main.html" %} 
 
-{% block content %}
+{% block content %} 
 
+{% if page == "login" %}
 <form action="{% url 'login' %}" method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Username"/>
-    <input type="password" name="password"/>
-    <input type="submit" value="Login"/>
+	{% csrf_token %}
+	<input type="text" name="username" placeholder="Username" />
+	<input type="password" name="password" />
+	<input type="submit" value="Login" />
 </form>
+<p>If you don't have an account yet. <a href="{% url 'register' %}">Sign up!</a></p>
+{% elif page == "register" %} 
+<h1>Register User</h1>
+
+<form action="{% url 'register' %}" method="post">
+	{% csrf_token %}
+	{{ form.as_p }}
+	<input type="submit" value="Register User">
+</form>
+
+<p>If you already have an account. <a href="{% url 'login' %}">Login!</a></p>
+{% endif %}
 
 {% endblock content %}
