--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/users/templates/users/login-register.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/users/templates/users/login-register.html
@@ -1,25 +1,97 @@
 {% extends "main.html" %} 
-
+{% load static %}
 {% block content %} 
 
 {% if page == "login" %}
-<form action="{% url 'login' %}" method="POST">
-	{% csrf_token %}
-	<input type="text" name="username" placeholder="Username" />
-	<input type="password" name="password" />
-	<input type="submit" value="Login" />
-</form>
-<p>If you don't have an account yet. <a href="{% url 'register' %}">Sign up!</a></p>
-{% elif page == "register" %} 
-<h1>Register User</h1>
 
-<form action="{% url 'register' %}" method="post">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<input type="submit" value="Register User">
-</form>
+<div class="auth">
+	<div class="card">
+		<div class="auth__header text-center">
+			<a href="/">
+				<img src="{% static 'images/icon.svg' %}" alt="icon" />
+			</a>
+			<h3>Account Login</h3>
+			<p>Hello Developer, Welcome Back!</p>
+		</div>
 
-<p>If you already have an account. <a href="{% url 'login' %}">Login!</a></p>
-{% endif %}
+		<form action="{% url 'login' %}" method="POST" class="form auth__form">
+			{% csrf_token %}
+			<!-- Input:Username -->
+			<div class="form__field">
+				<label for="formInput#text">Username: </label>
+				<input
+					class="input input--text"
+					id="formInput#text"
+					type="text"
+					name="username"
+					placeholder="Enter your username..."
+				/>
+			</div>
+
+			<!-- Input:Password -->
+			<div class="form__field">
+				<label for="formInput#password">Password: </label>
+				<input
+					class="input input--password"
+					id="formInput#passowrd"
+					type="password"
+					name="password"
+					placeholder="••••••••"
+				/>
+			</div>
+			<div class="auth__actions">
+				<input class="btn btn--sub btn--lg" type="submit" value="Log In" />
+				<a href="forgetpassword.html">Forget Password?</a>
+			</div>
+		</form>
+
+		<div class="auth__alternative">
+			<p>Don’t have an Account?</p>
+			<a href="{% url 'register' %}">Sign Up</a>
+		</div>
+	</div>
+</div>
+
+{% elif page == "register" %}
+
+<div class="auth">
+	<div class="card">
+		<div class="auth__header text-center">
+			<a href="/">
+				<img src="{% static 'images/icon.svg' %}" alt="icon" />
+			</a>
+			<h3>Register an Account</h3>
+			<p>Create a new developer account</p>
+		</div>
+
+		<form action="{% url 'register' %}" method="post" class="form auth__form">
+			{% csrf_token %}
+
+			{% for field in form %}
+			<div class="form__field">
+				<label for="formInput#text">{{ field.label }}</label>
+				{{ field }}
+				<!-- <input
+					class="input input--text"
+					id="formInput#text"
+					type="text"
+					name="text"
+					placeholder="e.g. Dennis Ivanov"
+				/> -->
+			</div>
+			{% endfor %}
+
+			<div class="auth__actions">
+				<input class="btn btn--sub btn--lg" type="submit" value="Sign  In" />
+			</div>
+		</form>
+		<div class="auth__alternative">
+			<p>Already have an Account?</p>
+			<a href="{% url 'login' %}">Log In</a>
+		</div>
+	</div>
+</div>
+
+{% endif %} 
 
 {% endblock content %}
