--- a/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/main.html
+++ b/django_study/udemy-dennis-ivy/221129_01/devsearch/templates/main.html
@@ -29,7 +29,7 @@
 	<body>
 		{% include "navbar.html" %} 
 
-    {% if messages %}
+    <!-- {% if messages %}
 		<ul class="messages">
 			{% for message in messages %}
 			<li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
@@ -37,10 +37,19 @@
 			</li>
 			{% endfor %}
 		</ul>
-		{% endif %} 
-    
-    {% block content %} 
+		{% endif %}  -->
 
+    {% if messages %}
+		{% for message in messages %}
+			<div class="alert alert--{{message.tags}}">
+				<p class="alert__message">{{message}}</p>
+				<button class="alert__close">x</button>
+			</div>
+		{% endfor %}
+		{% endif %} 
+
+    {% block content %} 
     {% endblock content %}
 	</body>
+	<script src="{% static 'uikit/app.js' %}"></script>
 </html>
