--- a/django_study/youtube-social-media-app/221211_01/social_book/templates/signup.html
+++ b/django_study/youtube-social-media-app/221211_01/social_book/templates/signup.html
@@ -10,7 +10,7 @@
 			rel="icon"
 			type="image/png"
 		/>
-		<title>sign up</title>
+		<title>Sign Up</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{% static 'assets/css/icons.css' %}" />
@@ -26,7 +26,7 @@
 				<div class="max-w-6xl mx-auto">
 					<div class="flex items-center lg:justify-between justify-around">
 						<a href="trending.html">
-							<b><h1 style="font-size: 1.5rem">Socol</h1></b>
+							<b><h1 style="font-size: 1.5rem">Social Book</h1></b>
 						</a>
 
 						<div
@@ -48,32 +48,59 @@
 				<div
 					class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-"
 				>
-					<h1 class="lg:text-3xl text-xl font-semibold mb-6">Sign in</h1>
+					<h1 class="lg:text-3xl text-xl font-semibold mb-6">Sign up</h1>
 					<!--<p class="mb-2 text-black text-lg"> Register to manage your account </p>-->
-					<form action="index.html">
+					{% if messages %}
+					<div>
+						<style>
+							h5 {
+								color: red;
+							}
+						</style>
+						{% for message in messages %}
+						<div class="{{messsage.tags}}">
+							<h5>{{message}}</h5>
+						</div>
+						{% endfor %}
+					</div>
+					{% endif %}
+
+					<form action="" method="post">
+						{% csrf_token %}
+						<!-- cross site request forgery -->
 						<!--<div class="flex lg:flex-row flex-col lg:space-x-2">
                         <input type="text" placeholder="First Name"  class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
                         <input type="text" placeholder="Last Name" class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
                     </div>-->
 						<input
 							type="text"
+							name="username"
 							placeholder="Username"
 							class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
 							style="border: 1px solid #d3d5d8 !important"
 						/>
 						<input
-							type="text"
+							type="email"
+							name="email"
+							placeholder="Email"
+							class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
+							style="border: 1px solid #d3d5d8 !important"
+						/>
+						<input
+							type="password"
+							name="password"
 							placeholder="Password"
 							class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
 							style="border: 1px solid #d3d5d8 !important"
 						/>
 						<input
-							type="text"
+							type="password"
+							name="password2"
 							placeholder="Confirm Password"
 							class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
 							style="border: 1px solid #d3d5d8 !important"
 						/>
-						<div class="flex justify-start my-4 space-x-1">
+						<!-- <div class="flex justify-start my-4 space-x-1">
 							<div class="checkbox">
 								<input type="checkbox" id="chekcbox1" checked />
 								<label for="chekcbox1"
@@ -81,12 +108,12 @@
 								>
 							</div>
 							<a href="#"> Terms and Conditions</a>
-						</div>
+						</div> -->
 						<button
 							type="submit"
 							class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full"
 						>
-							Login
+							Sign Up
 						</button>
 						<div class="text-center mt-5 space-x-2">
 							<p class="text-base">
