--- a/django_study/youtube-tomi-social-media-app/221211_01/social_book/templates/index.html
+++ b/django_study/youtube-tomi-social-media-app/221211_01/social_book/templates/index.html
@@ -269,7 +269,7 @@
 							<li><a href="setting.html"> Account setting </a></li>
 							<li><a href="explore.html">explore </a></li>
 							<li><a href="#"> Help </a></li>
-							<li><a href="signin.html"> Log Out</a></li>
+							<li><a href="{% url 'logout' %}"> Log Out</a></li>
 						</ul>
 					</div>
 				</div>
@@ -1376,6 +1376,6 @@
 		<script src="{% static 'assets/js/simplebar.js' %}"></script>
 		<script src="{% static 'assets/js/custom.js' %}"></script>
 
-		<script src="{% static '../../unpkg.com/ionicons%405.2.3/dist/ionicons.js' %}"></script>
+		<!-- <script src="{% static '../../unpkg.com/ionicons%405.2.3/dist/ionicons.js' %}"></script> -->
 	</body>
 </html>
