--- a/django_study/youtube-tomi-social-media-app/221211_01/social_book/templates/signin.html
+++ b/django_study/youtube-tomi-social-media-app/221211_01/social_book/templates/signin.html
@@ -26,16 +26,16 @@
 				<div class="max-w-6xl mx-auto">
 					<div class="flex items-center lg:justify-between justify-around">
 						<a href="trending.html">
-							<b><h1 style="font-size: 1.5rem">Socol</h1></b>
+							<b><h1 style="font-size: 1.5rem">Social Book</h1></b>
 						</a>
 
 						<div
 							class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm"
 						>
 							<a
-								href="signup.html"
+								href="{% url 'signup' %}"
 								class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white"
-								>Register</a
+								>Sign Up</a
 							>
 						</div>
 					</div>
@@ -47,21 +47,40 @@
 				<div
 					class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-"
 				>
-					<h1 class="lg:text-3xl text-xl font-semibold mb-6">Log in</h1>
-					<form action="index.html">
+					<h1 class="lg:text-3xl text-xl font-semibold mb-6">Sign In</h1>
+					{% if messages %}
+					<div>
+						<style>
+							h5 {
+								color: red;
+							}
+						</style>
+						{% for message in messages %}
+						<div class="{{messsage.tags}}">
+							<h5>{{message}}</h5>
+						</div>
+						{% endfor %}
+					</div>
+					{% endif %}
+
+					<form action="" method="post">
+						<!-- cross site request forgery -->
+						{% csrf_token %}
 						<input
 							type="text"
 							placeholder="Username"
+							name="username"
 							class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
 							style="border: 1px solid #d3d5d8 !important"
 						/>
 						<input
-							type="text"
-							placeholder="***********"
+							type="password"
+							placeholder="Password"
+							name="password"
 							class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
 							style="border: 1px solid #d3d5d8 !important"
 						/>
-						<div class="flex justify-between my-4">
+						<!-- <div class="flex justify-between my-4">
 							<div class="checkbox">
 								<input type="checkbox" id="chekcbox1" checked />
 								<label for="chekcbox1"
@@ -69,17 +88,17 @@
 								>
 							</div>
 							<a href="#"> Forgot Your Password? </a>
-						</div>
+						</div> -->
 						<button
 							type="submit"
 							class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full"
 						>
-							Login
+							Sign In
 						</button>
 						<div class="text-center mt-5 space-x-2">
 							<p class="text-base">
 								Not registered?
-								<a href="form-register.html" class=""> Create a account </a>
+								<a href="{% url 'signup' %}" class=""> Sign Up </a>
 							</p>
 						</div>
 					</form>
@@ -98,7 +117,13 @@
 						<a href="#"> Terms</a>
 						<a href="#"> Privacy</a>
 					</div>
-					<p class="capitalize">© copyright 2020 by socol</p>
+					<p class="capitalize">
+						© Copyright
+						<script>
+							document.write(/\d{4}/.exec(Date())[0]);
+						</script>
+						by Social Book
+					</p>
 				</div>
 			</div>
 		</div>
