--- a/django_study/udemy-schwarzmuller/221214_01/django_course_site/meetups/templates/meetups/index.html
+++ b/django_study/udemy-schwarzmuller/221214_01/django_course_site/meetups/templates/meetups/index.html
@@ -7,20 +7,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>All Meetups</title>
   <link rel="stylesheet" href="{% static 'meetups/styles/base.css' %}">
+  <link rel="stylesheet" href="{% static 'meetups/styles/all-meetups.css' %}">
 </head>
 <body>
-  <h1>All Meetups!</h1>
-  <p>Hello World</p>
-
-  {% if show_meetups %}
-    {% for meetup in meetups %}
-    <h2>{{meetup.title}}</h2>
-    <!-- <h2>{{ meetups.0.title }}</h2>
-    <h2>{{ meetups.1.title }}</h2> -->
-    {% endfor %}
-  {% else %}
-    <p>No meetups found</p>
-  {% endif %}
+  <header id="main-header">
+    <nav><a href="{% url 'meetups' %}" id="main-logo">Django Meetups</a></nav>
+    <h1>We got great meetups coming up!</h1>
+    <p>Find the one that you like and want to go!</p>
+  </header>
+  <main>
+    <section>
+      <h2>Upcoming Meetups</h2>
+      <ol>
+        {% for meetup in meetups %}
+        <li class="meetup-item">
+          <article>
+            <div class="meetup-summary">
+              <div class="meetup-image">
+                <img src="" alt="">
+              </div>
+              <div class="meetup-details">
+                <h3>{{ meetup.title }}</h3>
+                <address>{{ meetup.location }}</address>
+              </div>
+            </div>
+            <div class="meetup-actions">
+              <a href="" class="btn">More Details</a> 
+            </div>
+          </article>
+        </li>
+        {% endfor %}
+      </ol>
+    </section>
+  </main>
 
 </body>
 </html>
