--- a/django_study/udemy-schwarzmuller/221214_01/django_course_site/meetups/templates/meetups/index.html
+++ b/django_study/udemy-schwarzmuller/221214_01/django_course_site/meetups/templates/meetups/index.html
@@ -32,7 +32,7 @@
               </div>
             </div>
             <div class="meetup-actions">
-              <a href="" class="btn">More Details</a> 
+              <a href="{% url 'meetup-details' %}" class="btn">More Details</a> 
             </div>
           </article>
         </li>
