--- a/django_study/udemy-schwarzmuller/221214_01/django_course_site/meetups/templates/meetups/index.html
+++ b/django_study/udemy-schwarzmuller/221214_01/django_course_site/meetups/templates/meetups/index.html
@@ -1,45 +1,45 @@
+{% extends "meetups/base/base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>All Meetups</title>
-  <link rel="stylesheet" href="{% static 'meetups/styles/base.css' %}">
-  <link rel="stylesheet" href="{% static 'meetups/styles/all-meetups.css' %}">
-</head>
-<body>
-  <header id="main-header">
-    <nav><a href="{% url 'meetups' %}" id="main-logo">Django Meetups</a></nav>
-    <h1>We got great meetups coming up!</h1>
-    <p>Find the one that you like and want to go!</p>
-  </header>
-  <main>
-    <section>
-      <h2>Upcoming Meetups</h2>
-      <ol>
-        {% for meetup in meetups %}
-        <li class="meetup-item">
-          <article>
-            <div class="meetup-summary">
-              <div class="meetup-image">
-                <img src="" alt="">
-              </div>
-              <div class="meetup-details">
-                <h3>{{ meetup.title }}</h3>
-                <address>{{ meetup.location }}</address>
-              </div>
-            </div>
-            <div class="meetup-actions">
-              <a href="{% url 'meetup-details' %}" class="btn">More Details</a> 
-            </div>
-          </article>
-        </li>
-        {% endfor %}
-      </ol>
-    </section>
-  </main>
 
-</body>
-</html>
+{% block title %}
+All Meetups
+{% endblock %}
+
+{% block site_css %}
+<link rel="stylesheet" href="{% static 'meetups/styles/all-meetups.css' %}">
+{% endblock %}
+
+{% block main_heading %}
+We got great meetups coming up!
+{% endblock %}
+
+{% block header_content %}
+<p>Find the one that you like and want to go!</p>
+{% endblock %}
+
+{% block body %}
+<section>
+  <h2>Upcoming Meetups</h2>
+  <ol>
+    {% for meetup in meetups %}
+    <li class="meetup-item">
+      <article>
+        <div class="meetup-summary">
+          <div class="meetup-image">
+            <img src="" alt="">
+          </div>
+          <div class="meetup-details">
+            <h3>{{ meetup.title }}</h3>
+            <address>{{ meetup.location }}</address>
+          </div>
+        </div>
+        <div class="meetup-actions">
+          <a href="{% url 'meetup-details' meetup.slug %}" class="btn">More Details</a> 
+        </div>
+      </article>
+    </li>
+    {% endfor %}
+  </ol>
+</section>
+{% endblock %}
+
